--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,4 +52,5 @@ jobs:
           path: |
             ${{ github.workspace }}/openssl-3.1.3/*.a
             ${{ github.workspace }}/openssl-3.1.3/*.so
+            ${{ github.workspace }}/openssl-3.1.3/include/
           
